2003-04-13  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Trey.

        * WebView.subproj/WebDefaultWindowOperationsDelegate.m:
	(-[WebDefaultWindowOperationsDelegate webView:setContentRect:]):
	Implemented in terms of webView:setFrame: to save clients work.

2003-04-11  Chris Blumenberg  <cblu@apple.com>

	Removed WebKitErrorResourceLoadInterruptedByPolicyChange error because it isn't used. 

        Reviewed by john.

        * Misc.subproj/WebKitErrors.h:
        * Misc.subproj/WebKitErrors.m:
        (registerErrors):
        * WebKit.pbproj/project.pbxproj:

2003-04-11  Trey Matteson  <trey@apple.com>

	3148002 - printing shouldn't depend on the size of the window

	The basic strategy is copied from khtmlview's print method:  We reset the width
	of the document to the paper width minus margins, and relayout before paginating
	and printing.

        Reviewed by Richard.

        * WebKit.pbproj/project.pbxproj:  Someone is using an old version...
        * WebView.subproj/WebDynamicScrollBarsView.m:
        (-[WebDynamicScrollBarsView reflectScrolledClipView:]):  Don't do the dynamic
	scrollbar update magic when printing.
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView layoutToPageWidth:]):  New routine, basically the old layout
	method with a new parameter.  If we're given an width, we call a different
	bridge method.
        (-[WebHTMLView layout]):  Just call above method with width==0
        (-[WebHTMLView drawRect:]):  Protect setting/resetting of graphics context and
	additional clip with a DURING/HANDLER.  I saw an assertion failure that could
	be explained by this, so this is mostly a beartrap for that problem.
        (-[WebHTMLView _setPrinting:pageWidth:]):  Pass page width through to others.
        (-[WebHTMLView beginDocument]):  If we are not in a frame set, do a layout
	using the page width.
        (-[WebHTMLView endDocument]):  Pass 0 to new pageWidth: arg.

2003-04-08  Trey Matteson  <trey@apple.com>
