@@ -1,3 +1,14 @@
+2003-04-12  Chris Blumenberg  <cblu@apple.com>
+
+	Fixed: 3162338 - Embedding SVG with <object type="image/svg+xml"> doesn't work
+
+        Reviewed by dave.
+
+        * WebCoreSupport.subproj/WebImageRendererFactory.m:
+        (-[WebImageRendererFactory supportedMIMETypes]): code moved from +[WebImageView supportedImageMIMETypes]
+        * WebView.subproj/WebImageView.m:
+        (+[WebImageView supportedImageMIMETypes]): return -[WebImageRendererFactory supportedMIMETypes]
+
 2003-04-13  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Trey.
